2005-06-15  Daniel Pfeiffer  <occitan@esperanto.org>

	* progmodes/make-mode.el (makefile-space, makefile-makepp-perl):
	Eliminate "-face" suffix.
	(makefile-targets): Inherit font-lock-variable-name-face and
	eliminate "-face" suffix.
	(makefile-shell): Remove attributes and eliminate "-face" suffix.
	(makefile-*-font-lock-keywords): Append makefile-targets in rule
	actions, instead of prepending, to make it less visible.
	(makefile-previous-dependency, makefile-match-dependency): Don't
	match a target on a continuation line.

	* files.el (auto-mode-alist): Put Makefile in gmake mode.

2005-06-15  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-tooltip-print): Respect
	tooltip-use-echo-area.
	(menu): Re-order menu items.

	* progmodes/gud.el (tooltip-use-echo-area): Remove alias.
	Define in tooltip.el.
	(gud-tooltip-process-output): Respect tooltip-use-echo-area.
	(gud-tooltip-tips): Respect tooltip-use-echo-area and
	gud-tooltip-echo-area.

	* tooltip.el (tooltip-use-echo-area): Restore from gud.el for
	backward compatibility and make obsolete.
	(tooltip-help-tips): Use tooltip-use-echo-area.
	(tooltip-show-help-function): Rename to...
	(tooltip-show-help): ...this, because it is a function.
	(tooltip-mode, tooltip-help-message): Call tooltip-show-help.

2005-06-14  Luc Teirlinck  <teirllm@auburn.edu>

	* emacs-lisp/edebug.el (edebug-all-defs, edebug-initial-mode)
	(edebug-print-length, edebug-print-level, edebug-print-circle)
	(edebug-modify-breakpoint, edebug-eval-last-sexp)
	(edebug-eval-print-last-sexp): Doc fixes.

2005-06-14  Kim F. Storm  <storm@cua.dk>

	* ido.el (ido-mode): Make a new keymap every time we enable ido,
	as the coverage buffer/file/both may change.

2005-06-14  Lute Kamstra  <lute@gnu.org>

	* net/ange-ftp.el (internal-ange-ftp-mode): Use delay-mode-hooks
	and run-mode-hooks.  Simplify.

	* mail/rmailedit.el (rmail-edit-mode):
	* progmodes/octave-inf.el (inferior-octave-mode):